--- a/public/css/mobil.css
+++ b/public/css/mobil.css
@@ -1,292 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-body {
-  color: #fff;
-  background: #0E1127;
-}
-
-.container-fluid {
-  padding: 0 !important;
-}
-
-.clear {
-  clear: both;
-}
-
-.row {
-  margin-right: 0 !important;
-}
-
-[v-cloak] {
-  display: none;
-}
-
-#header {
-  border-top: 5px solid rgba(0, 0, 0, 0.12);
-  background: #422897;
-  background: -webkit-gradient(left top, right top, color-stop(0%, #422897), color-stop(100%, #874eab));
-  background: -webkit-gradient(linear, left top, right top, from(#422897), to(#874eab));
-  background: linear-gradient(to right, #422897 0%, #874eab 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#422897', endColorstr='#874eab', GradientType=1 );
-}
-
-#header .top {
-  padding: 20px;
-}
-
-#header .top .logo {
-  font-size: 16px;
-  font-weight: bold;
-}
-
-#header .top .user .col {
-  padding: 0;
-}
-
-#header .top .user a {
-  padding: 0;
-  color: #fff;
-  font-weight: bold;
-}
-
-#header .top .user a i {
-  color: orange;
-}
-
-#header .menu {
-  background: rgba(255, 255, 255, 0.1);
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-#header .menu .btn {
-  margin-left: 20px;
-  background: transparent;
-  color: #fff;
-  border: none;
-  padding-left: 0;
-}
-
-#header .menu .btn:focus {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-#header .menu .input-group {
-  margin-bottom: 0 !important;
-}
-
-#header .menu .input-group input {
-  background: transparent;
-  color: #fff;
-  border: none;
-  outline: none !important;
-}
-
-#header .menu .input-group input:focus {
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
-}
-
-#header .menu .input-group input::-webkit-input-placeholder {
-  color: #ccc;
-}
-
-#header .menu .input-group input:-ms-input-placeholder {
-  color: #ccc;
-}
-
-#header .menu .input-group input::-ms-input-placeholder {
-  color: #ccc;
-}
-
-#header .menu .input-group input::placeholder {
-  color: #ccc;
-}
-
-#header .menu .input-group span {
-  background: transparent;
-  color: #fff;
-  border: none;
-}
-
-#content {
-  padding: 20px;
-}
-
-#content h5 {
-  color: #666c98;
-  border-bottom: 3px dotted #1f254c;
-  font-size: 14px;
-  font-weight: bold;
-  padding-bottom: 10px;
-  margin-bottom: 20px;
-}
-
-#content .filmler .film {
-  margin-bottom: 10px;
-}
-
-#content .filmler .film img {
-  width: 100%;
-  border-radius: 5px;
-  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.56);
-          box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.56);
-  height: 218px;
-}
-
-#content .filmler .film .name {
-  height: 50px;
-  overflow: hidden;
-  color: #676e9e;
-  font-weight: bold;
-  margin-top: 5px;
-  text-align: center;
-}
-
-#content .filmler .film .name .puan {
-  color: orange;
-}
-
-.film-detay .name {
-  font-weight: bold;
-  font-size: 17px;
-}
-
-.film-detay .detay {
-  margin-top: 10px;
-}
-
-.film-detay .detay li {
-  font-weight: bold;
-}
-
-.film-detay .detay li span {
-  color: orange;
-}
-
-.yorumlar {
-  margin-top: 20px;
-}
-
-.konu {
-  color: #666c98;
-  margin-top: 10px;
-  margin-bottom: 15px;
-}
-
-.secenekler {
-  text-align: center;
-  font-weight: bold;
-}
-
-.secenekler i {
-  color: orange;
-}
-
-.yorum_list ul {
-  margin-top: 20px;
-}
-
-.yorum_list ul li {
-  margin-bottom: 10px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-}
-
-.yorum_list ul li .left img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-  border: 2px solid rgba(255, 255, 255, 0.4);
-}
-
-.yorum_list ul li .right .top {
-  margin-bottom: 15px;
-}
-
-.yorum_list ul li .right .top .name {
-  font-weight: bold;
-  color: orange;
-  float: left;
-  margin-right: 10px;
-}
-
-.yorum_list ul li .right .top .tarih {
-  color: #ccc;
-}
-
-.yorum_list ul li .right p {
-  color: #65709a;
-}
-
-.popMenu {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 99999;
-  display: none;
-}
-
-.popMenu li {
-  background: #6546A6;
-}
-
-.popMenu li a {
-  color: #fff;
-}
-
-.popMenu li a i {
-  color: orange;
-}
-
-.sayfalama {
-  margin-bottom: 50px;
-}
-
-.sayfalama ul li {
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
-.sayfalama ul li a {
-  display: inline-block;
-  border-radius: 3px;
-  background: #1e2346;
-  font-weight: 600;
-  color: #fff;
-  padding: 3px 0px;
-  text-align: center;
-  width: 30px;
-}
-
-.sayfalama ul li a.aktif {
-  background: #fa3556;
-}
-
-.arsiv_acilir {
-  display: none;
-  position: absolute;
-  z-index: 9999;
-  left: 20px;
-  right: 20px;
-}
-
-.arsiv_acilir li {
-  background: #6546A6;
-}
-
-.arsiv_acilir li a {
-  color: #fff;
-  font-weight: bold;
-}
-
-.arsiv_acilir li a i {
-  color: orange;
-}
-
+*{margin:0;padding:0;list-style:none}body{color:#fff;background:#0e1127}.container-fluid{padding:0!important}.clear{clear:both}.row{margin-right:0!important}[v-cloak]{display:none}#header{border-top:5px solid rgba(0,0,0,.12);background:#422897;background:-webkit-gradient(left top,right top,color-stop(0,#422897),color-stop(100%,#874eab));background:-webkit-gradient(linear,left top,right top,from(#422897),to(#874eab));background:linear-gradient(90deg,#422897 0,#874eab);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#422897",endColorstr="#874eab",GradientType=1)}#header .top{padding:20px}#header .top .logo{font-size:16px;font-weight:700}#header .top .user .col{padding:0}#header .top .user a{padding:0;color:#fff;font-weight:700}#header .top .user a i{color:orange}#header .menu{background:hsla(0,0%,100%,.1);padding-top:5px;padding-bottom:5px}#header .menu .btn{margin-left:20px;background:transparent;color:#fff;border:none;padding-left:0}#header .menu .btn:focus{-webkit-box-shadow:none;box-shadow:none}#header .menu .input-group{margin-bottom:0!important}#header .menu .input-group input{background:transparent;color:#fff;border:none;outline:none!important}#header .menu .input-group input:focus{-webkit-box-shadow:none!important;box-shadow:none!important}#header .menu .input-group input::-webkit-input-placeholder{color:#ccc}#header .menu .input-group input:-ms-input-placeholder,#header .menu .input-group input::-ms-input-placeholder{color:#ccc}#header .menu .input-group input::placeholder{color:#ccc}#header .menu .input-group span{background:transparent;color:#fff;border:none}#content{padding:20px}#content h5{color:#666c98;border-bottom:3px dotted #1f254c;font-size:14px;font-weight:700;padding-bottom:10px;margin-bottom:20px}#content .filmler .film{margin-bottom:10px}#content .filmler .film img{width:100%;border-radius:5px;-webkit-box-shadow:3px 3px 3px rgba(0,0,0,.56);box-shadow:3px 3px 3px rgba(0,0,0,.56);height:218px}#content .filmler .film .name{height:50px;overflow:hidden;color:#676e9e;font-weight:700;margin-top:5px;text-align:center}#content .filmler .film .name .puan{color:orange}.film-detay .name{font-weight:700;font-size:17px}.film-detay .detay{margin-top:10px}.film-detay .detay li{font-weight:700}.film-detay .detay li span{color:orange}.yorumlar{margin-top:20px}.konu{color:#666c98;margin-top:10px;margin-bottom:15px}.secenekler{text-align:center;font-weight:700}.secenekler i{color:orange}.yorum_list ul{margin-top:20px}.yorum_list ul li{margin-bottom:10px;padding-bottom:10px;border-bottom:1px solid hsla(0,0%,100%,.05)}.yorum_list ul li .left img{width:50px;height:50px;border-radius:50px;border:2px solid hsla(0,0%,100%,.4)}.yorum_list ul li .right .top{margin-bottom:15px}.yorum_list ul li .right .top .name{font-weight:700;color:orange;float:left;margin-right:10px}.yorum_list ul li .right .top .tarih{color:#ccc}.yorum_list ul li .right p{color:#65709a}.popMenu{position:absolute;left:0;right:0;z-index:99999;display:none}.popMenu li{background:#6546a6}.popMenu li a{color:#fff}.popMenu li a i{color:orange}.sayfalama{margin-bottom:50px}.sayfalama ul li{float:left;margin-right:10px;margin-bottom:10px}.sayfalama ul li a{display:inline-block;border-radius:3px;background:#1e2346;font-weight:600;color:#fff;padding:3px 0;text-align:center;width:30px}.sayfalama ul li a.aktif{background:#fa3556}.arsiv_acilir{display:none;position:absolute;z-index:9999;left:20px;right:20px}.arsiv_acilir li{background:#6546a6}.arsiv_acilir li a{color:#fff;font-weight:700}.arsiv_acilir li a i{color:orange}
