--- a/resources/assets/sass/mobil.scss
+++ b/resources/assets/sass/mobil.scss
@@ -96,7 +96,7 @@ body {
                 width: 100%;
                 border-radius: 5px;
                 box-shadow: 3px 3px 3px rgba(0,0,0,.56);
-                height: 218px;
+                height: auto;
             }
             .name {
                 height: 50px; overflow: hidden; color:#676e9e;
